// Copyright 2018 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto2";

package chrome.chromeos_infra.skylab.proto.inventory;
option go_package = "inventory";

// This proto definition describes the on-disk configuration data describing the
// ChromeOS skylab inventory. This is _not_ intended to be used as an API
// definition between services. As a result, fields are marked as required
// whenever strict checking is desired, and the proto definition can change
// relatively freely in the future.

import "device.proto";

// NEXT TAG: 6
message ServoHostConnection {
  required string servo_host_id = 1;
  required string dut_id = 2;
  required int32 servo_port = 3;
  optional string servo_serial = 4;
  optional string servo_type = 5;
}

// NEXT TAG: 3
message ChameleonConnection {
  required chrome.chromeos_infra.skylab.proto.inventory.ChameleonDevice
      chameleon = 1;
  required chrome.chromeos_infra.skylab.proto.inventory.Device
      controlled_device = 2;
}
